# langchain_tutorial

01_chat_models_and_prompts/: .env.sample  main.py  prompt_templates.py  pyproject.toml  using_language_models.py  utils.py
02_build_semantic_search_engine/: documents_and_document_loaders.py  pyproject.toml  utils.py
03_classify_text_into_labels/: main.py  pyproject.toml
04_build_extraction_chain/: main.py  pyproject.toml
