[tool.poetry]
name = "01_chat_models_and_prompts"
version = "0.1.0"
description = ""
authors = ["velo.yamigiku <velo.yamigiku@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.25"
python-dotenv = "^1.1.0"
langchain-ollama = "^0.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
