[tool.poetry]
name = "02_build_semantic_search_engine"
version = "0.1.0"
description = ""
authors = ["velo.yamigiku <velo.yamigiku@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
langchain-community = "^0.3.24"
pypdf = "^5.5.0"
langchain-ollama = "^0.3.3"
langchain-chroma = "^0.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
