[tool.poetry]
name = "04_build_extraction_chain"
version = "0.1.0"
description = ""
authors = ["velo.yamigiku <velo.yamigiku@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
langchain-core = "^0.3.63"
langchain-ollama = "^0.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
